--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 
 		</dependency>
+		<dependency>
+ 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
@@ -61,6 +65,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>1.5.1.RELEASE</version>
 			</plugin>
 		</plugins>
 	</build>
