--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.mail.port=587
 #发件箱账号
 spring.mail.username=1370151513@qq.com
 #使用smtp服务发送，此密码为smtp验证密码，不是邮箱登陆密码
-spring.mail.password=*************
+spring.mail.password=************
 #此配置开启邮箱smtp权限
 spring.mail.properties.mail.smtp.auth=true
 #启用ssl加密
