--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
  			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.javacsv</groupId>
+			<artifactId>javacsv</artifactId>
+			<version>2.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
