--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,15 @@
 			<version>2.2.2</version>
 		</dependency>
 
-    </dependencies>
+		<!--druid -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.27</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
